# keys

./: .gitignore  CMakeLists.txt  README.md  build.bat  keys.cpp  start_keylogger.bat
backend/: .env  README.md  package.json  server.js
backend/middleware/: auth.js
backend/models/: Device.js  KeyLog.js  User.js
frontend/: README.md  package.json
frontend/src/: App.js  index.js
frontend/src/components/: Layout.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: Dashboard.js  LoginPage.js
include/: KeyLogger.h  SmtpClient.h
src/: KeyLogger.cpp  SmtpClient.cpp  main.cpp
